@@ -2,6 +2,7 @@
 
  - Bugfix #9980: Proper check for table 'version'
  - Allowing an alternative way of specifying HTML inline images
+ - Bugfix #9981: Checking for empty status message in HTTP response
 
 * 2007-10-25 - thorben.betten@open-xchange.com
 
